Bug fix: Keywords were given as a single parameter from admin.jsp instead of multiple